[gd_scene load_steps=9 format=3 uid="uid://ck6an46jqoexn"]

[ext_resource type="Script" path="res://world.gd" id="1_vgck8"]
[ext_resource type="PackedScene" uid="uid://d3mu7c5po244t" path="res://Player/Player.tscn" id="2_crlxm"]
[ext_resource type="Texture2D" uid="uid://datwdib0upsth" path="res://icon.svg" id="3_ob1dh"]
[ext_resource type="PackedScene" uid="uid://bhmn2jgjax1e5" path="res://Menu/playerhealthui.tscn" id="4_icei3"]
[ext_resource type="PackedScene" uid="uid://dnwkyc1xiejio" path="res://Inventory/inventory.tscn" id="5_iaaif"]
[ext_resource type="Script" path="res://Inventory/Inventory_Interface.gd" id="7_0b3tf"]
[ext_resource type="PackedScene" uid="uid://ct1wvcjtiika8" path="res://Inventory/slot.tscn" id="8_af32v"]
[ext_resource type="PackedScene" uid="uid://ccr32kuvuwuwv" path="res://Enemy/Lowly Slime/slime.tscn" id="8_gli6f"]

[node name="world" type="Node2D"]
z_as_relative = false
script = ExtResource("1_vgck8")

[node name="Player" parent="." instance=ExtResource("2_crlxm")]
position = Vector2(382, 217)

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(515, 58)
texture = ExtResource("3_ob1dh")

[node name="PlayerHealthUI" parent="." instance=ExtResource("4_icei3")]

[node name="InventoryUI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="InventoryUI"]
visible = false
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("7_0b3tf")

[node name="PlayerInventory" parent="InventoryUI/InventoryInterface" instance=ExtResource("5_iaaif")]
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0

[node name="EquipInventory" parent="InventoryUI/InventoryInterface" instance=ExtResource("5_iaaif")]
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0

[node name="GrabbedSlot" parent="InventoryUI/InventoryInterface" instance=ExtResource("8_af32v")]
visible = false
modulate = Color(1, 1, 1, 0.45098)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = -12.0
offset_top = -13.5
offset_right = 52.0
offset_bottom = 50.5

[node name="Slime" parent="." instance=ExtResource("8_gli6f")]
position = Vector2(134, 220)

[node name="Slime2" parent="." instance=ExtResource("8_gli6f")]
position = Vector2(653, 278)
